fixing contrast and HTML validation errors

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -291,7 +291,7 @@
 }
 
 #recipe a {
-  color: #007bff;
+  color: var(--dark-blue);
   text-decoration: none;
 }
 
